Agregadas tarjetas con redirección a otros HTML

--- a/index.html
+++ b/index.html
@@ -64,15 +64,17 @@
                                 <p><strong>Conceptos:</strong> VLANs, Trunking, VTP, Inter-VLAN routing.</p>
                             </div>
                         </div>
-                        <div class="tarjeta-lab">
+                        <!-- En la sección de laboratorios, reemplaza las tarjetas con enlaces -->
+                        <a href="lab-vlan.html" class="tarjeta-lab">
                             <div class="lab-imagen">
-                                <img src="img/ccnna/lab2.png" alt="Laboratorio CCNA 2">
+                                <img src="img/ccnalab2/a.jpg" alt="Laboratorio CCNA 1">
                             </div>
                             <div class="lab-info">
-                                <h4>OSPF en Área Única</h4>
-                                <p><strong>Objetivo:</strong> Configurar el protocolo OSPF en un entorno de múltiples routers.</p>
-                                <p><strong>Conceptos:</strong> OSPF, DR/BDR, Cost, Redistribución.</p>
+                                <h4>Configuración de Red jerárquica</h4>
+                                <p><strong>Objetivo:</strong> Implementar y verificar una red con múltiples VLANs.</p>
+                                <p><strong>Conceptos:</strong> VLANs, Trunking, VTP, Inter-VLAN routing,Dhcp nooping,SSH/VTY,Port Security.</p>
                             </div>
+                        </a>
                         </div>
                     </div>
                 </div>
@@ -133,15 +135,15 @@
         <div class="container">
             <h2>Topologías</h2>
             <div class="galeria-topologias">
-                <div class="item-topologia" onclick="abrirModal('img/ccnna/lab1.png')">
-                    <img src="img/ccnna/lab1.png" alt="Topología 1">
+                <div class="item-topologia" onclick="abrirModal('img/ccnalab2/a.jpg')">
+                    <img src="img/ccnalab2/a.jpg" alt="Topología 1">
                     <div class="overlay">Ver más</div>
                 </div>
-                <div class="item-topologia" onclick="abrirModal('img/ccnna/lab2.png')">
-                    <img src="img/ccnna/lab2.png" alt="Topología 2">
+                <div class="item-topologia" onclick="abrirModal('img/ccnalab2/a.jpg')">
+                    <img src="img/ccnalab2/a.jpg" alt="Topología 2">
                     <div class="overlay">Ver más</div>
                 </div>
-                <div class="item-topologia" onclick="abrirModal('img/ccnp/lab1.png')">
+                <div class="item-topologia" onclick="abrirModal('img/ccnalab2/a.jpg')">
                     <img src="img/ccnp/lab1.png" alt="Topología 3">
                     <div class="overlay">Ver más</div>
                 </div>
