--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                         
                         <!-- Laboratorio 4 -->
-                        <a href="lab-vlan4.html" class="tarjeta-lab">
+                        <a href="lab-telefonia.html" class="tarjeta-lab">
                             <div class="lab-imagen">
                                 <img src="img/ccnna/lab4.png" alt="Laboratorio CCNA 4">
                             </div>
