--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
                         <!-- Laboratorio 4 -->
                         <a href="lab-telefonia.html" class="tarjeta-lab">
                             <div class="lab-imagen">
-                                <img src="img/ccnna/lab4.png" alt="Laboratorio CCNA 4">
+                                <img src="img/ccnalab4/image.png" alt="Laboratorio CCNA 4">
                             </div>
                             <div class="lab-info">
-                                <h4>Implementación de EtherChannel</h4>
-                                <p><strong>Objetivo:</strong> Configurar enlaces troncales agregados con EtherChannel.</p>
-                                <p><strong>Conceptos:</strong> PAgP, LACP, redundancia, balanceo de carga.</p>
+                                <h4>Implementación de Telefonía IP,Qos y Eigrp</h4>
+                                <p><strong>Objetivo:</strong> Configurar una red escalable con telefonía IP, QoS y enrutamiento EIGRP entre sedes.</p>
+                                <p><strong>Conceptos:</strong> VLANs de voz y datos, Calidad de Servicio (QoS), EIGRP, DHCP para teléfonos IP, priorización de tráfico.</p>
                             </div>
                         </a>
 
