--- a/index.html
+++ b/index.html
@@ -128,21 +128,56 @@
                     <h3>CCNP <i class="fas fa-chevron-down"></i></h3>
                     <div id="ccnp" class="contenido-categoria">
                         <div class="tarjeta-lab">
+                            <a href="ccnp-OSPFmultiarea.html" class="tarjeta-lab">
                             <div class="lab-imagen">
-                                <img src="img/ccnp/lab1.png" alt="Laboratorio CCNP 1">
-                            </div>
-                            <div class="lab-info">
-                                <h4>Implementación de MPLS</h4>
-                                <p><strong>Objetivo:</strong> Configurar una red MPLS con LDP y VPNs.</p>
-                                <p><strong>Conceptos:</strong> MPLS, LDP, MP-BGP, VRF.</p>
-                            </div>
+                                    <img src="img/ccnp1/ospf.png" alt="Laboratorio CCNP">
+                                </div>
+                                <div class="lab-info">
+                                    <h4>OSPF Multiárea Backbone, Normal, Stub y NSSA</h4>
+                                    <p><strong>Objetivo:</strong> Implementar OSPF Multiárea en una red corporativa optimizando el enrutamiento y controlando la propagación de LSA.</p>
+                                    <p><strong>Conceptos:</strong> OSPF Multiárea,Área Backbone,Área Normal,Área Stub,Área NSSA.</p>
+                                </div>
+                            </a>
+
+
+
+
                         </div>
+                        <!-- Laboratorio 2 -->
+
+                            <a href="LAB-HSRP.HTML" class="tarjeta-lab">
+                                <div class="lab-imagen">
+                                    <img src="img/ccnp1/HSRP.png" alt="Laboratorio CCNP 2">
+                                </div>
+                                <div class="lab-info">
+                                    <h4>Redundancia con HSRP, OSPF Multiárea y EtherChannel</h4>
+                                    <p><strong>Objetivo:</strong> Implementar una red empresarial con alta disponibilidad y balanceo de carga de gateways.</p>
+                                    <p><strong>Conceptos:</strong> OSPF Multiárea,HSRP,Switch multicapa con Inter-VLAN routing,SVIs.</p>
+                                </div>
+                            </a>
                     </div>
                 </div>
                 
                 <!-- Automatización -->
                 <div class="categoria" onclick="toggleCategoria('automatizacion')">
                     <h3>Automatización de Redes <i class="fas fa-chevron-down"></i></h3>
+                    <div id="automatizacion" class="contenido-categoria">
+                        <div class="tarjeta-lab">
+                            <div class="lab-imagen">
+                                <img src="img/automatizacion/lab1.png" alt="Laboratorio Automatización 1">
+                            </div>
+                            <div class="lab-info">
+                                <h4>Script de Backup con Python</h4>
+                                <p><strong>Objetivo:</strong> Crear un script para realizar backup automático de configuraciones.</p>
+                                <p><strong>Conceptos:</strong> Python, Paramiko, Configuración de dispositivos.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- LINUX/WINDOWS SERVER -->
+                <div class="categoria" onclick="toggleCategoria('automatizacion')">
+                    <h3>LINUX/WINDOWS SERVER <i class="fas fa-chevron-down"></i></h3>
                     <div id="automatizacion" class="contenido-categoria">
                         <div class="tarjeta-lab">
                             <div class="lab-imagen">
