--- a/lab-Ospf.html
+++ b/lab-Ospf.html
@@ -201,7 +201,7 @@
         <div class="topology-image">
             <!-- Espacio para imagen de topología (imagen real no disponible) -->
             <div style="background-color: #eee; padding: 40px; text-align: center; border-radius: 5px;">
-                [Imagen de topología OSPF con VLANs]
+                <img src="img/cc" alt="Vista Rack" style="width:50%;">
             </div>
             <p class="caption">Figura 1: Topología de red empresarial con OSPF, VLANs y NAT</p>
         </div>
