Actualiza descripción del laboratorio VRRP con info real y estilo consistente

--- a/index.html
+++ b/index.html
@@ -141,10 +141,8 @@
 
 
 
-
+                          <!-- Laboratorio 2 -->
                         </div>
-                        <!-- Laboratorio 2 -->
-
                             <a href="LAB-HSRP.HTML" class="tarjeta-lab">
                                 <div class="lab-imagen">
                                     <img src="img/ccnp1/HSRP.png" alt="Laboratorio CCNP 2">
@@ -153,6 +151,17 @@
                                     <h4>Redundancia con HSRP, OSPF Multiárea y EtherChannel</h4>
                                     <p><strong>Objetivo:</strong> Implementar una red empresarial con alta disponibilidad y balanceo de carga de gateways.</p>
                                     <p><strong>Conceptos:</strong> OSPF Multiárea,HSRP,Switch multicapa con Inter-VLAN routing,SVIs.</p>
+                                </div>
+                            </a>
+
+                            <a href="vrrp.html" class="tarjeta-lab">
+                                <div class="lab-imagen">
+                                    <img src="img/ccnp1/vrrp.png" alt="Laboratorio VRRP">
+                                </div>
+                                <div class="lab-info">
+                                    <h4>Redundancia con VRRP, OSPF, EIGRP y VPN IPSec</h4>
+                                    <p><strong>Objetivo:</strong> Implementar una red empresarial con alta disponibilidad, enrutamiento dinámico y túneles VPN seguros.</p>
+                                    <p><strong>Conceptos:</strong> VRRP, OSPF, EIGRP, VPN IPSec site-to-site, EtherChannel (LACP), Inter-VLAN routing.</p>
                                 </div>
                             </a>
                     </div>
