cambios de topologia

--- a/index.html
+++ b/index.html
@@ -239,12 +239,20 @@
                     <img src="img/ccnalab2/b.png" alt="Topología 3">
                     <div class="overlay">Ver más</div>
                 </div>
-                <div class="item-topologia" onclick="abrirModal('img/ccnalab2/')">
-                    <img src="img/ccnalab2/a.jpg" alt="Topología 4">
+                <div class="item-topologia" onclick="abrirModal('img/ccnp1/ospf.png')">
+                    <img src="img/ccnp1/ospf.png" alt="Topología 4">
                     <div class="overlay">Ver más</div>
                 </div>
-                <div class="item-topologia" onclick="abrirModal('img/seguridad/lab1.png')">
-                    <img src="img/seguridad/lab1.png" alt="Topología 5">
+                <div class="item-topologia" onclick="abrirModal('img/ccnp1/HSRP.png')">
+                    <img src="img/ccnp1/HSRP.png" alt="Topología 5">
+                    <div class="overlay">Ver más</div>
+                </div>
+                <div class="item-topologia" onclick="abrirModal('img/ccnp1/vrrp.png')">
+                    <img src="img/ccnp1/vrrp.png" alt="Topología 6">
+                    <div class="overlay">Ver más</div>
+                </div>
+                <div class="item-topologia" onclick="abrirModal('img/ccnalab4/image.png')">
+                    <img src="img/ccnalab4/image.png" alt="Topología 7">
                     <div class="overlay">Ver más</div>
                 </div>
             </div>
