nuevos cambios linux

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
             <div class="presentacion">
                 <div class="texto-presentacion">
                     <h2>Hola, soy Anderson Hernandez</h2>
-                    <p>Soy Ingeniero en Infotecnologia y me especialiso en redes y comunicaciones con experiencia en diseño, implementación y solución de problemas en infraestructuras de red. Actualmente me dedico a profundizar mis conocimientos en protocolos avanzados de networking y seguridad perimetral.</p>
-                    <p>Mis habilidades incluyen configuración de dispositivos de red, implementación de protocolos de enrutamiento, diseño de topologías escalables y automatización de procesos de red.</p>
+                    <p>Ingeniero en Infotecnología especializado en redes, comunicaciones y nube. He trabajado con simuladores y equipos reales para diseñar e implementar infraestructuras de red, resolver problemas y automatizar procesos. Actualmente, me estoy formando como AWS Solution Architect – Associate y estoy en proceso de certificación CCNP, profundizando en protocolos avanzados y arquitecturas seguras y escalables en la nube.</p>
                 </div>
                 <div class="foto-perfil">
                     <img src="img/asd.png" alt="Anderson Her">
@@ -223,7 +222,7 @@
                                 <img src="img/ccnp1/linux.png" alt="Laboratorio Servidores">
                             </div>
                             <div class="lab-info">
-                                <h4>Servidor SSH Seguro con Autenticación por Llaves</h4>
+                                <h4>Servidor apache</h4>
                                 <p><strong>Objetivo:</strong> Configurar múltiples sitios web en un solo servidor Apache con logs separados y rotación automática.</p>
                                 <p><strong>Conceptos:</strong> Virtual Hosts, Apache Configuration, Log Management, Logrotate, Directory Permissions, Web Server Administration.</p>
                             </div>
