Agrega configuraciónes de AWS

--- a/index.html
+++ b/index.html
@@ -230,6 +230,52 @@
 
                     </div>
                 </div>
+
+                
+
+                <!-- AWS -->
+                <div class="categoria" onclick="toggleCategoria('aws')">
+                    <h3>AWS <i class="fas fa-chevron-down"></i></h3>
+                    <div id="aws" class="contenido-categoria">
+                          <a href="awsEc2.html" class="tarjeta-lab">
+                            <div class="lab-imagen">
+                                <img src="img/aws/AWS.webp" alt="Laboratorio EC2+RSD">
+                            </div>
+                            <div class="lab-info">
+                                <h4>PLATAFORMA DE MICROSERVICIOS EN AWS EC2</h4>
+                                <p><strong>Objetivo:</strong> Implementar una plataforma de microservicios en AWS utilizando EC2 para el despliegue de APIs REST con FastAPI y RDS como base de datos MySQL.</p>
+                                <p><strong>Conceptos:</strong> AWS EC2, RDS MY SQL Y PYTHON.</p>
+                            </div>
+                        </a>
+
+
+
+                        <a href="EC2.html" class="tarjeta-lab">
+                            <div class="lab-imagen">
+                                <img src="img/aws/AWS.webp" alt="Laboratorio Servidores">
+                            </div>
+                            <div class="lab-info">
+                                <h4>Lanzamiento de Instancia EC2 con User Data</h4>
+                                <p><strong>Objetivo:</strong> Lanzar una instancia EC2 con configuración automatizada mediante User Data para instalar Apache y desplegar una página web personalizada sin intervención manual.</p>
+                                <p><strong>Conceptos:</strong> AWS EC2, User Data, Apache Installation, Bootstrap Scripts, Cloud-Init, Instance Metadata, Web Server Deployment.</p>
+                            </div>
+                        </a>
+
+                        <a href="Balanceador.html" class="tarjeta-lab">
+                            <div class="lab-imagen">
+                                <img src="img/aws/AWS.webp" alt="Laboratorio Servidores">
+                            </div>
+                            <div class="lab-info">
+                                <h4>Balanceador de Carga HTTP con Alta Disponibilidad</h4>
+                                <p><strong>Objetivo:</strong> Desplegar un Application Load Balancer en AWS que distribuya tráfico HTTP entre dos instancias EC2 (Servidor A y B) con autoconfiguración mediante User Data.</p>
+                                <p><strong>Conceptos:</strong> Application Load Balancer, Target Groups, Security Groups, User Data, Health Checks, Alta Disponibilidad, Auto-Scaling, AWS EC2.</p>
+                            </div>
+                        </a>
+
+                    </div>
+                </div>
+
+
                 
                 <!-- Seguridad -->
                 <div class="categoria" onclick="toggleCategoria('seguridad')">
