--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 <img src="img/ccnalab1/image2.jpg" alt="Diagrama Lógico" style="width:50%;">
                             </div>
                             <div class="lab-info">
-                                <h4>Mega Data-Center con EtherChannel, Seguridad L2/L3 y VPN</h4>
+                                <h4>Mega Data-Center con EtherChannel, Seguridad L2/L3 y VPN Site-to-site</h4>
                                 <p><strong>Objetivo:</strong> Diseñar e implementar un data-center jerárquico con VLANs, EtherChannel LACP, RSTP, seguridad perimetral y túnel VPN IPsec.</p>
                                 <p><strong>Conceptos:</strong> VTP, RSTP, DHCP Snooping, DAI, ACLs, AAA, VPN IPsec, NTP, SYSLOG.</p>
                             </div>
