fix: normalize filenames for GitHub Pages2

--- a/index.html
+++ b/index.html
@@ -65,12 +65,24 @@
                          <a href="lab-mega.html" class="tarjeta-lab">
                             <div class="lab-imagen">
                                     <img src="img/ccnalab1/image.png" alt="Vista Rack" style="width:50%;">
-                                    <img src="img/ccnalab1/image2.jpg" alt="Diagrama Lógico" style="width:50%;">
+                                   
                             </div>
                             <div class="lab-info">
                                 <h4>Mega Data-Center con EtherChannel, Seguridad L2/L3 y VPN Site-to-site.</h4>
                                 <p><strong>Objetivo:</strong> Diseñar e implementar un data-center jerárquico con VLANs, EtherChannel LACP, RSTP, seguridad perimetral y túnel VPN IPsec.</p>
                                 <p><strong>Conceptos:</strong> VTP, RSTP, DHCP Snooping, DAI, ACLs, AAA, VPN IPsec, NTP, SYSLOG.</p>
+                            </div>
+                        </a>
+
+
+                         <a href="lab-mega.html" class="tarjeta-lab">
+                            <div class="lab-imagen">
+                                <img src="img/ccnalab2/b.png" alt="Laboratorio CCNA 1">
+                            </div>
+                            <div class="lab-info">
+                                <h4>Configuración de OSPF,NAT,ACL</h4>
+                                <p><strong>Objetivo:</strong> Red Empresarial con OSPF, NAT Overload, Inter-VLAN Routing y ACL.</p>
+                                <p><strong>Conceptos:</strong> Nat,OSPF,ACl,VLANs, Trunking, Inter-VLAN routing.</p>
                             </div>
                         </a>
 
